# chili

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  release.yml
benchmarks/: Makefile  README.md  pyproject.toml  results.md
benchmarks/benchmarks/: attrs_decode.py  attrs_encode.py  chili_decode.py  chili_encode.py  marshmallow_decode.py  marshmallow_encode.py  pydantic_decode.py  pydantic_encode.py
chili/: __init__.py  dataclasses.py  decoder.py  encoder.py  error.py  hydration.py  iso_datetime.py  json_support.py  mapper.py  mapping.py  serializer.py  state.py  typing.py
docs/examples/: serializable-via-init.py
examples/: callable_mapping.py  simple_mapping.py
tests/: test_dataclasses.py  test_datetime_strategy.py  test_decode.py  test_decoder.py  test_deque_strategy.py  test_dict_strategy.py  test_encode.py  test_encoder.py  test_enum_strategy.py  test_frozenset_strategy.py  test_generic_strategy.py  test_iso_datetime.py  test_json_support.py  test_list_strategy.py  test_mapping.py  test_named_tuple_strategy.py  test_naming_strategy.py  test_optional_strategy.py  test_ordered_dict_strategy.py  test_persistent_mapping.py  test_schema.py  test_serialzer.py  test_set_strategy.py  test_tuple_strategy.py  test_typed_dict_strategy.py  test_typing.py  test_union_strategy.py  test_unkown_type_strategy.py
tests/issues/: test_optional_enum_issue.py  test_resolve_forward_references.py
tests/usecases/: abc_test.py  classvar_and_initvar_test.py  custom_object_typehint_decoding_test.py  custom_type_test.py  dataclasses_test.py  decodable_test.py  dict_test.py  encodable_test.py  encode_via_init.py  forward_reference_test.py  generic_test.py  internal_classes_test.py  list_test.py  namedtuple_test.py  newtype_test.py  ordered_dict_test.py  pathlib_tests.py  pattern_tests.py  private_properties_support_test.py  serializable_test.py  test_parent_child_serialisation.py  tuple_test.py  typed_dict_test.py  typevar_test.py  union_usecase.py  unknown_type_test.py  userstring_test.py  uuid_test.py
