[tool.poetry]
authors = [
    "Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
description = "Chili is serialisation library. It can serialise/deserialise almost any object."
documentation = "https://github.com/kodemore/chili"
homepage = "https://github.com/kodemore/chili"
keywords = ["serialise", "deserialise", "encode", "decode", "object", "class"]
license = "MIT"
name = "chili"
readme = "README.md"
repository = "https://github.com/kodemore/chili"
version = "2.1.0"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.2"
gaffe = "0.2.0"

[tool.poetry.dev-dependencies]
black = "22.3"
flake8 = "^5.0.4"
isort = "^5.6.4"
mypy = "^0.961"
pylint = "^2.7.2"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-mock = "^3.7"
toml-sort = "^0.20.1"
